--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,6 +3,7 @@ kotlin = "1.9.0"
 
 [libraries]
 clikt = "com.github.ajalt.clikt:clikt:4.0.0"
+okio = "com.squareup.okio:okio:3.4.0"
 
 [plugins]
 spotless = "com.diffplug.spotless:6.20.0"
