Add init command to get trunk information

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -5,5 +5,7 @@ kotlin = "1.9.0"
 clikt = "com.github.ajalt.clikt:clikt:4.0.0"
 okio = "com.squareup.okio:okio:3.4.0"
 
+kotlin-serialization-json = "org.jetbrains.kotlinx:kotlinx-serialization-json:1.5.1"
+
 [plugins]
 spotless = "com.diffplug.spotless:6.20.0"
