--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,6 @@
 [versions]
 kotlin = "1.9.0"
+sqldelight = "2.0.0"
 
 [libraries]
 clikt = "com.github.ajalt.clikt:clikt:4.0.0"
@@ -7,6 +8,8 @@ github = "org.kohsuke:github-api:1.313"
 okio = "com.squareup.okio:okio:3.4.0"
 
 kotlin-serialization-json = "org.jetbrains.kotlinx:kotlinx-serialization-json:1.5.1"
+
+sqldelight-driver = { module = "app.cash.sqldelight:sqlite-driver", version.ref = "sqldelight" }
 
 [plugins]
 spotless = "com.diffplug.spotless:6.20.0"
