--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -5,6 +5,7 @@ sqldelight = "2.0.0"
 [libraries]
 clikt = "com.github.ajalt.clikt:clikt:4.0.0"
 github = "org.kohsuke:github-api:1.313"
+jline-terminal = "org.jline:jline-terminal:3.22.0"
 okio = "com.squareup.okio:okio:3.4.0"
 
 kotlin-serialization-json = "org.jetbrains.kotlinx:kotlinx-serialization-json:1.5.1"
