--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -13,3 +13,6 @@ sqldelight-dialect = { module = "app.cash.sqldelight:sqlite-3-38-dialect", versi
 
 [plugins]
 spotless = "com.diffplug.spotless:6.22.0"
+sqldelight = { id = "app.cash.sqldelight", version.ref = "sqldelight" }
+kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
+kotlin-plugin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
