Remove binaries from repo
Bundle them from the output folder of the build script for local
development and update the location on CI to match.

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -66,6 +66,6 @@ jobs:
       - uses: actions/download-artifact@master
         with:
           name: native-libraries
-          path: src/main/dist/native
+          path: native
 
       - run: ./gradlew build
