--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,9 +3,11 @@ kotlin = "1.9.20-RC"
 sqldelight = "2.0.0"
 
 [libraries]
+assertk = "com.willowtreeapps.assertk:assertk:0.26.1"
 clikt = "com.github.ajalt.clikt:clikt:4.2.1"
 github = "org.kohsuke:github-api:1.316"
 jline-terminal = "org.jline:jline-terminal:3.23.0"
+junit = "junit:junit:4.13.2"
 kotlin-serialization-json = "org.jetbrains.kotlinx:kotlinx-serialization-json:1.6.0"
 okio = "com.squareup.okio:okio:3.6.0"
 sqldelight-driver = { module = "app.cash.sqldelight:sqlite-driver", version.ref = "sqldelight" }
