--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -96,3 +96,10 @@ jobs:
           name: test-report
           path: build/reports/tests/test/
           if-no-files-found: ignore
+
+      - name: Upload distribution
+        uses: actions/upload-artifact@v3
+        with:
+          name: st
+          path: ./build/install/st/*
+          if-no-files-found: error
