Use tar instead of zip for the distribution
This preserves file permissions, which are needed for the executables
to be executable.

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -101,5 +101,5 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: st
-          path: ./build/install/st/*
+          path: ./build/distributions/st.tar
           if-no-files-found: error
