Migrate to kotlin native
Note that this temporarily disables cross-compilation. There's still a
lot of work to do to make that work and the only thing it's blocking is
being able to publish binaries. This currently isn't working because
dynamic linking is broken so this is not really a regression.

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -17,55 +17,25 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ ubuntu-latest ]
-        arch: [ amd64 ]
-        cmake-arch: [ x86_64 ]
-        openssl-arch: [ linux-x86_64 ]
         include:
+          # TODO: Linking is not working on linux.
+#          - os: ubuntu-latest
+#            cmake-arch: x86_64
+#            openssl-arch: linux-x86_64
+#            sqlite-arch: x64-gnu-linux
+#            task: linkReleaseExecutableLinuxX64
           - os: macOS-latest
-            arch: x86_64
             cmake-arch: x86_64
             openssl-arch: darwin64-x86_64-cc
-          - os: macOS-latest
-            arch: aarch64
-            cmake-arch: arm64
-            openssl-arch: darwin64-arm64-cc
+            sqlite-arch: x64-apple-macos
+            task: linkReleaseExecutableMacosX64
+          # TODO: Cross-compilation is not working. There's so many dependencies that need to be manually built.
+#          - os: macOS-latest
+#            cmake-arch: arm64
+#            openssl-arch: darwin64-arm64-cc
+#            sqlite-arch: arm64-apple-macos
+#            task: linkReleaseExecutableMacosArm64
           # TODO: build on 'windows-latest'
-
-    runs-on: ${{ matrix.os }}
-
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Install dependencies
-        if: matrix.os == 'macOS-latest'
-        run: brew install coreutils
-
-      - name: Build native library
-        run: ./.github/workflows/build-deps.sh -a ${{ matrix.arch }} -c ${{ matrix.cmake-arch }} -o ${{ matrix.openssl-arch }}
-
-      - name: Upload native libraries
-        uses: actions/upload-artifact@v3
-        with:
-          name: native-libraries
-          path: ./native/*
-          if-no-files-found: error
-
-      - name: Upload libgit2 includes
-        if: matrix.os == 'ubuntu-latest'
-        uses: actions/upload-artifact@v3
-        with:
-          name: libgit-include
-          path: ./libgit2/include
-          if-no-files-found: error
-
-  build:
-    needs: build_deps
-
-    strategy:
-      fail-fast: false
-      matrix:
-        os: [ ubuntu-latest, macOS-latest ]
 
     runs-on: ${{ matrix.os }}
 
@@ -76,31 +46,14 @@ jobs:
           distribution: 'zulu'
           java-version: 21
 
-      - name: Download native libraries
-        uses: actions/download-artifact@master
-        with:
-          name: native-libraries
-          path: native
+      - name: Build native libraries
+        run: ./build-deps.sh -c ${{ matrix.cmake-arch }} -o ${{ matrix.openssl-arch }} -s ${{ matrix.sqlite-arch }}
 
-      - name: Download libgit2 includes
-        uses: actions/download-artifact@master
-        with:
-          name: libgit-include
-          path: libgit2/include
-
-      - run: ./gradlew build
-
-      - uses: actions/upload-artifact@v3
-        if: failure()
-        with:
-          name: test-report
-          path: build/reports/tests/test/
-          if-no-files-found: ignore
+      - run: ./gradlew ${{ matrix.task }}
 
       - name: Upload distribution
-        if: matrix.os == 'ubuntu-latest'
         uses: actions/upload-artifact@v3
         with:
-          name: st
-          path: ./build/distributions/st.tar
+          name: bin
+          path: build/bin
           if-no-files-found: error
