--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,25 +1,24 @@
 [versions]
-kotlin = "1.9.20"
+kotlin = "1.9.10"
 ktor = "2.3.6"
-sqldelight = "2.0.0"
+sqldelight = "2.1.0-SNAPSHOT"
 
 [libraries]
 assertk = "com.willowtreeapps.assertk:assertk:0.27.0"
 clikt = "com.github.ajalt.clikt:clikt:4.2.1"
-jline-terminal = "org.jline:jline-terminal:3.24.1"
-junit = "junit:junit:4.13.2"
 kotlin-serialization-json = "org.jetbrains.kotlinx:kotlinx-serialization-json:1.6.1"
-ktor-client-cio = { module = "io.ktor:ktor-client-cio", version.ref = "ktor" }
+kotlin-test = { module = "org.jetbrains.kotlin:kotlin-test" }
 ktor-client-core = { module = "io.ktor:ktor-client-core", version.ref = "ktor" }
+ktor-client-curl = { module = "io.ktor:ktor-client-curl", version.ref = "ktor" }
 ktor-client-negotiation = { module = "io.ktor:ktor-client-content-negotiation", version.ref = "ktor" }
 ktor-serialization-json = { module = "io.ktor:ktor-serialization-kotlinx-json", version.ref = "ktor" }
 okio = "com.squareup.okio:okio:3.6.0"
-sqldelight-driver = { module = "app.cash.sqldelight:sqlite-driver", version.ref = "sqldelight" }
+sqldelight-driver = { module = "app.cash.sqldelight:native-driver", version.ref = "sqldelight" }
 sqldelight-dialect = { module = "app.cash.sqldelight:sqlite-3-38-dialect", version.ref = "sqldelight" }
 slf4j-simple = { module = "org.slf4j:slf4j-simple", version = "1.7.36" }
 
 [plugins]
 spotless = "com.diffplug.spotless:6.22.0"
 sqldelight = { id = "app.cash.sqldelight", version.ref = "sqldelight" }
-kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
+kotlin-multiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref = "kotlin" }
 kotlin-plugin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
