--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -46,7 +46,7 @@ jobs:
         # Forces libcurl to be statically linked by uninstalling the dynamic libs
         run: brew uninstall --ignore-dependencies curl
 
-      - run: ./gradlew ${{ matrix.task }}
+      - run: ./gradlew buildDependencies ${{ matrix.task }}
 
       - name: Upload distribution
         uses: actions/upload-artifact@v4
