--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -48,6 +48,14 @@ jobs:
 
       - run: ./gradlew buildDependencies ${{ matrix.task }}
 
+      - name: Test Report
+        uses: dorny/test-reporter@v1
+        if: success() || failure()
+        with:
+          name: JUnit Tests
+          path: build/test-results/**/TEST-*.xml
+          reporter: java-junit
+
       - name: Upload distribution
         uses: actions/upload-artifact@v4
         with:
