--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -48,6 +48,13 @@ jobs:
 
       - run: ./gradlew buildDependencies ${{ matrix.task }}
 
+      - uses: dorny/test-reporter@v1
+        if: success() || failure()
+        with:
+          name: ${{ matrix.os }} Tests
+          path: '**/build/test-results/**/TEST-*.xml'
+          reporter: java-junit
+
       - name: Upload distribution
         uses: actions/upload-artifact@v4
         with:
