--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -10,6 +10,7 @@ assertk = "com.willowtreeapps.assertk:assertk:0.28.1"
 clikt = "com.github.ajalt.clikt:clikt:5.0.3"
 coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "coroutines" }
 coroutines-test = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-test", version.ref = "coroutines" }
+kotlin-collections-immutable = "org.jetbrains.kotlinx:kotlinx-collections-immutable:0.3.8"
 kotlin-serialization-json = "org.jetbrains.kotlinx:kotlinx-serialization-json:1.8.0"
 kotlin-test = { module = "org.jetbrains.kotlin:kotlin-test" }
 ktor-client-core = { module = "io.ktor:ktor-client-core", version.ref = "ktor" }
