--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -46,6 +46,8 @@ jobs:
         # Forces libcurl to be statically linked by uninstalling the dynamic libs
         run: brew uninstall --ignore-dependencies curl
 
+      - run: ./gradlew spotlessCheck
+
       - run: ./gradlew buildDependencies ${{ matrix.task }}
 
       - uses: dorny/test-reporter@v1
