--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -13,6 +13,34 @@ env:
   GRADLE_OPTS: "-Dorg.gradle.jvmargs=-Xmx4g -Dorg.gradle.daemon=false -Dkotlin.incremental=false"
 
 jobs:
+  spotless:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-java@v4
+        with:
+          distribution: 'zulu'
+          java-version-file: .github/.java-version
+
+      - uses: gradle/actions/setup-gradle@v4
+        continue-on-error: true
+
+      - run: ./gradlew spotlessCheck
+
+  database:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-java@v4
+        with:
+          distribution: 'zulu'
+          java-version-file: .github/.java-version
+
+      - uses: gradle/actions/setup-gradle@v4
+        continue-on-error: true
+
+      - run: ./gradlew verifySqlDelightMigration
+
   build:
     strategy:
       fail-fast: false
@@ -36,17 +64,10 @@ jobs:
       - uses: actions/setup-java@v4
         with:
           distribution: 'zulu'
-          java-version: 21
+          java-version-file: .github/.java-version
 
       - uses: gradle/actions/setup-gradle@v4
         continue-on-error: true
-
-      - name: Uninstall Homebrew curl
-        if: matrix.os == 'macOS-13' || matrix.os == 'macOS-14'
-        # Forces libcurl to be statically linked by uninstalling the dynamic libs
-        run: brew uninstall --ignore-dependencies curl
-
-      - run: ./gradlew spotlessCheck
 
       - run: ./gradlew buildDependencies ${{ matrix.task }}
 
@@ -70,6 +91,8 @@ jobs:
     runs-on: ubuntu-latest
     needs:
       - build
+      - database
+      - spotless
     steps:
       - name: Check
         run: |
